--- a/chat.html
+++ b/chat.html
@@ -63,6 +63,7 @@ header h1 { color:var(--color-primary); font-size:1.3em; display:flex; align-ite
   background:white;
   border-right:1px solid #ddd;
   overflow-y:auto;
+  transition:all 0.3s ease;
 }
 .userItem {
   display:flex;
@@ -93,16 +94,27 @@ header h1 { color:var(--color-primary); font-size:1.3em; display:flex; align-ite
   align-items:center;
 }
 #chatHeader h2 { font-size:1em; color:#333; }
-#chatWindow { flex:1; overflow-y:auto; padding:10px; }
+#chatWindow { flex:1; overflow-y:auto; padding:10px; display:flex; flex-direction:column; }
 .msg {
   margin:5px 0;
   padding:8px;
   border-radius:8px;
   max-width:80%;
   word-wrap:break-word;
+  position:relative;
 }
 .userMsg { background:#e0f7e9; align-self:flex-end; text-align:right; }
 .otherMsg { background:#fff8dc; align-self:flex-start; text-align:left; }
+.msg .deleteBtn {
+  position:absolute;
+  top:2px;
+  right:5px;
+  font-size:0.8em;
+  color:red;
+  cursor:pointer;
+  display:none;
+}
+.userMsg:hover .deleteBtn { display:inline; }
 
 /* INPUT */
 #chatInput { display:flex; border-top:1px solid #ddd; }
@@ -140,10 +152,30 @@ footer {
   z-index:5;
 }
 
-/* MOBILE FIXES */
+/* MOBILE */
 @media(max-width:768px){
   #mainContent { flex-direction:column; height:auto; }
-  #userList, #adSidebar { display:none; }
+  #adSidebar { display:none; }
+
+  /* Lista de usuários retrátil */
+  #userList {
+    position:fixed;
+    top:100px;
+    left:0;
+    right:0;
+    height:200px;
+    border:1px solid #ccc;
+    background:white;
+    display:none;
+    z-index:20;
+  }
+  #toggleUsers {
+    background:var(--color-primary);
+    color:white;
+    border:none;
+    padding:6px 10px;
+    border-radius:5px;
+  }
   footer {
     position:fixed;
     bottom:0;
@@ -151,7 +183,7 @@ footer {
     right:0;
     z-index:100;
   }
-  #chatContainer { height:calc(100vh - 170px); }
+  #chatContainer { height:calc(100vh - 220px); }
 }
 </style>
 </head>
@@ -165,6 +197,7 @@ footer {
   <button id="loginBtn">Login com Google</button>
   <button id="logoutBtn" style="display:none;">Logout</button>
   <button id="generalBtn" style="display:none;">💬 Bate-papo Geral</button>
+  <button id="toggleUsers" style="display:none;">👥 Usuários</button>
   <span id="onlineCount">👥 Usuários online: 0</span>
 </div>
 
@@ -211,6 +244,7 @@ const db = firebase.database();
 const loginBtn = document.getElementById("loginBtn");
 const logoutBtn = document.getElementById("logoutBtn");
 const generalBtn = document.getElementById("generalBtn");
+const toggleUsers = document.getElementById("toggleUsers");
 const userList = document.getElementById("userList");
 const msgInput = document.getElementById("msgInput");
 const sendBtn = document.getElementById("sendBtn");
@@ -233,6 +267,7 @@ auth.onAuthStateChanged(u=>{
     loginBtn.style.display="none";
     logoutBtn.style.display="inline-block";
     generalBtn.style.display="inline-block";
+    toggleUsers.style.display="inline-block";
     msgInput.disabled=false;
     sendBtn.disabled=false;
 
@@ -247,6 +282,7 @@ auth.onAuthStateChanged(u=>{
     loginBtn.style.display="inline-block";
     logoutBtn.style.display="none";
     generalBtn.style.display="none";
+    toggleUsers.style.display="none";
     msgInput.disabled=true;
     sendBtn.disabled=true;
     chatWindow.innerHTML="";
@@ -254,6 +290,11 @@ auth.onAuthStateChanged(u=>{
     onlineCount.textContent="👥 Usuários online: 0";
   }
 });
+
+// TOGGLE LISTA MOBILE
+toggleUsers.onclick=()=>{
+  userList.style.display = (userList.style.display==="block") ? "none" : "block";
+};
 
 // LISTA DE USUÁRIOS ONLINE
 function updateUsers(){
@@ -279,7 +320,7 @@ function openGlobal(){
   chatTitle.textContent="💬 Bate-papo Geral";
   chatWindow.innerHTML="";
   db.ref("chatGlobal").off();
-  db.ref("chatGlobal").limitToLast(50).on("child_added",snap=>renderMsg(snap.val()));
+  db.ref("chatGlobal").limitToLast(100).on("child_added",snap=>renderMsg(snap.key,snap.val()));
 }
 
 // CHAT PRIVADO
@@ -289,20 +330,27 @@ function openPrivate(uid,name){
   chatTitle.textContent="👤 "+name;
   chatWindow.innerHTML="";
   db.ref(currentChat).off();
-  db.ref(currentChat).limitToLast(50).on("child_added",snap=>renderMsg(snap.val()));
+  db.ref(currentChat).limitToLast(100).on("child_added",snap=>renderMsg(snap.key,snap.val()));
 }
 
 // RENDER MENSAGEM
-function renderMsg(m){
+function renderMsg(key,m){
   const div=document.createElement("div");
   div.className=m.uid===currentUser?.uid?"msg userMsg":"msg otherMsg";
-  div.textContent=`${m.user}: ${m.text}`;
+  div.innerHTML=`${m.user}: ${m.text}`;
+  if(m.uid===currentUser?.uid){
+    const del=document.createElement("span");
+    del.className="deleteBtn";
+    del.textContent="❌";
+    del.onclick=()=>deleteMsg(key);
+    div.appendChild(del);
+  }
   chatWindow.appendChild(div);
   chatWindow.scrollTop=chatWindow.scrollHeight;
-  if(m.uid!==currentUser?.uid) { msgSound.currentTime=0; msgSound.play(); }
+  if(m.uid!==currentUser?.uid){ msgSound.currentTime=0; msgSound.play(); }
 }
 
-// ENVIAR MENSAGEM
+// ENVIAR
 sendBtn.onclick=sendMsg;
 msgInput.addEventListener("keypress",e=>{if(e.key==="Enter")sendMsg();});
 function sendMsg(){
@@ -317,6 +365,27 @@ function sendMsg(){
   });
   msgInput.value="";
 }
+
+// APAGAR MENSAGEM (somente autor)
+function deleteMsg(key){
+  db.ref(currentChat+"/"+key).once("value").then(snap=>{
+    const msg=snap.val();
+    if(msg && msg.uid===currentUser.uid){
+      db.ref(currentChat+"/"+key).remove();
+      alert("Mensagem apagada com sucesso.");
+    } else {
+      alert("Você só pode apagar suas próprias mensagens.");
+    }
+  });
+}
+
+// REMOVER MENSAGEM REMOVIDA NA TELA
+db.ref().on("child_removed",snap=>{
+  const msgs=document.querySelectorAll(".msg");
+  msgs.forEach(m=>{
+    if(m.textContent.includes(snap.val()?.text)) m.remove();
+  });
+});
 
 // LIMPAR CHAT LOCAL
 clearBtn.onclick=()=>{ chatWindow.innerHTML=""; };
